// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should button danger to match snapshot 1`] = `
<button
  className="button -danger"
  onClick={[Function]}
>
  Click me success
</button>
`;

exports[`Should button default to match snapshot 1`] = `
<button
  className="button "
  onClick={[Function]}
>
  Click me success
</button>
`;

exports[`Should button success to match snapshot 1`] = `
<button
  className="button -success"
  onClick={[Function]}
>
  Click me success
</button>
`;
